--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react-dom": "^18.2.22",
     "@types/styled-components": "^5.1.34",
     "@xmpp/client": "^0.13.1",
+    "axios": "^1.7.2",
     "ltx": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,15 +20,14 @@
     "redux-saga": "^1.3.0",
     "redux-thunk": "^3.1.0",
     "styled-components": "^6.1.8",
-    "typescript": "^4.9.5",
-    "uuid": "^9.0.1",
-    "web-vitals": "^2.1.4"
+    "uuid": "^9.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build-rs": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build": "webpack --config webpack.config.js"
   },
   "eslintConfig": {
     "extends": [
@@ -48,9 +48,25 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
     "@types/lodash": "^4.17.4",
     "@types/react-modal": "^3.16.3",
     "@types/uuid": "^9.0.8",
-    "@types/xmpp__client": "^0.13.3"
+    "@types/xmpp__client": "^0.13.3",
+    "babel-loader": "^9.1.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.9.0",
+    "terser-webpack-plugin": "^5.3.10",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.5",
+    "webpack": "^5.92.0",
+    "webpack-cli": "^5.1.4"
   }
 }
