--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "projecet-2-ccomp",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
     "@types/node": "^16.18.89",
@@ -67,6 +67,8 @@
     "webpack": "^5.92.0",
     "webpack-cli": "^5.1.4"
   },
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "package-name": {},
   "description": "This is chat comonent, used for embedding chat into your apps",
   "entry point": {},
