--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "projecet-2-ccomp",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
-    "@types/node": "^16.18.89",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.22",
     "@types/styled-components": "^5.1.34",
@@ -17,7 +16,27 @@
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
     "styled-components": "^6.1.8",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@types/lodash": "^4.17.4",
+    "@types/react-modal": "^3.16.3",
+    "@types/uuid": "^9.0.8",
+    "@types/xmpp__client": "^0.13.3",
+    "babel-loader": "^9.1.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.9.0",
+    "terser-webpack-plugin": "^5.3.10",
+    "ts-loader": "^9.5.1",
+    "typescript": "^4.4.5",
+    "webpack": "^5.92.0",
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,28 +62,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/core": "^7.24.7",
-    "@babel/preset-env": "^7.24.7",
-    "@babel/preset-react": "^7.24.7",
-    "@babel/preset-typescript": "^7.24.7",
-    "@types/lodash": "^4.17.4",
-    "@types/react-modal": "^3.16.3",
-    "@types/uuid": "^9.0.8",
-    "@types/xmpp__client": "^0.13.3",
-    "babel-loader": "^9.1.3",
-    "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^7.1.2",
-    "css-minimizer-webpack-plugin": "^7.0.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.6.0",
-    "mini-css-extract-plugin": "^2.9.0",
-    "terser-webpack-plugin": "^5.3.10",
-    "ts-loader": "^9.5.1",
-    "typescript": "^4.4.5",
-    "webpack": "^5.92.0",
-    "webpack-cli": "^5.1.4"
   },
   "main": "dist/index.js",
   "module": "dist/index.js",
