--- a/package.json
+++ b/package.json
@@ -1,7 +1,23 @@
 {
   "name": "projecet-2-ccomp",
-  "version": "0.1.15",
+  "version": "0.1.16",
+  "type": "module",
+  "main": "dist/main.js",
+  "types": "dist/main.d.ts",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "build:lib": "tsc --p ./tsconfig-build.json && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
   "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "vite-plugin-dts": "^3.9.1",
     "@reduxjs/toolkit": "^2.2.1",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.22",
@@ -9,80 +25,23 @@
     "@xmpp/client": "^0.13.1",
     "axios": "^1.7.2",
     "ltx": "^3.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
-    "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
     "styled-components": "^6.1.8",
     "uuid": "^9.0.1"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build-rs": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "build": "webpack --config webpack.config.cjs",
-    "build:types": "tsc"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
-    "@babel/core": "^7.24.7",
-    "@babel/preset-env": "^7.24.7",
-    "@babel/preset-react": "^7.24.7",
-    "@babel/preset-typescript": "^7.24.7",
-    "@types/lodash": "^4.17.4",
-    "@types/react-modal": "^3.16.3",
-    "@types/uuid": "^9.0.8",
-    "@types/xmpp__client": "^0.13.3",
-    "babel-loader": "^9.1.3",
-    "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^7.1.2",
-    "css-minimizer-webpack-plugin": "^7.0.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.6.0",
-    "mini-css-extract-plugin": "^2.9.0",
-    "terser-webpack-plugin": "^5.3.10",
-    "ts-loader": "^9.5.1",
-    "typescript": "^4.4.5",
-    "webpack": "^5.92.0",
-    "webpack-cli": "^5.1.4"
-  },
-  "main": "./src/main.ts",
-  "module": "./src/main.ts",
-  "package-name": {},
-  "description": "This is chat comonent, used for embedding chat into your apps",
-  "entry point": "./src/main.ts",
-  "test command": {},
-  "git repository": {},
-  "keywords": [
-    "chat, chat-component"
-  ],
-  "author": {
-    "name": "Dappros"
-  },
-  "license": "ISC",
-  "type": "module",
-  "types": "dist/main.d.ts",
-  "files": [
-    "dist"
-  ]
+    "@types/node": "^20.14.9",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "^7.13.1",
+    "@vitejs/plugin-react": "^4.3.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "typescript": "^5.2.2",
+    "vite": "^5.3.1"
+  }
 }
