--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     /* Linting */
     "strict": false,
     "noUnusedLocals": false,
-    "noUnusedParameters": true,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true
   },
   "include": ["lib"],
