--- a/package.json
+++ b/package.json
@@ -15,9 +15,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "vite-plugin-dts": "^3.9.1",
     "@reduxjs/toolkit": "^2.2.1",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.22",
@@ -25,16 +22,20 @@
     "@xmpp/client": "^0.13.1",
     "axios": "^1.7.2",
     "ltx": "^3.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
     "styled-components": "^6.1.8",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "vite-plugin-dts": "^3.9.1"
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/xmpp__client": "^0.13.3",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
