--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/styled-components": "^5.1.34",
     "@xmpp/client": "^0.13.1",
     "axios": "^1.7.2",
+    "firebase": "^10.13.2",
     "ltx": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
