--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ethora/chat-component",
-  "version": "24.10.16",
+  "version": "24.10.18",
   "type": "module",
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
@@ -51,7 +51,7 @@
     "lib": "lib"
   },
   "author": "Ethora",
-  "license": "ISC",
+  "license": "AGPL",
   "keywords": [
     "chat",
     "messaging",
