--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@xmpp/client": "^0.13.1",
     "axios": "^1.7.2",
     "firebase": "^10.13.2",
+    "i": "^0.3.7",
     "js-sha256": "^0.11.0",
     "ltx": "^3.0.0",
+    "npm": "^10.9.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-qr-code": "^2.0.15",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
