--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "lint:fix": "npx eslint --fix && prettier . --write"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@reduxjs/toolkit": "^2.2.1",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.22",
