--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-qr-code": "^2.0.15",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "redux-persist-transform-encrypt": "^5.1.1",
     "redux-saga": "^1.3.0",
     "styled-components": "^6.1.8",
     "uuid": "^9.0.1",
