--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "lint:fix": "npx eslint --fix && prettier . --write"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@reduxjs/toolkit": "^2.2.1",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.22",
     "@types/styled-components": "^5.1.34",
     "@xmpp/client": "^0.13.1",
     "axios": "^1.7.2",
+    "emoji-mart": "^5.6.0",
     "firebase": "^10.13.2",
     "i": "^0.3.7",
     "js-sha256": "^0.11.0",
